--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,7 @@ body{
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.mycollapse{
+  background-color: #abc3ea;
+}
