--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,28 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  font-style: italic;
+}
+
+.card-header{
+  background-color: #f7f7f7;
+}
+
+.zooming {
+  position: relative;  
+  overflow: hidden;
+}
+
+.zooming img {
+  max-width: 100%;
+  
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.zooming:hover img {
+  -moz-transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
