--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,26 @@ body {
   padding: 0;
   font-family: sans-serif;
   font-style: italic;
+  /* background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRRKniOCjnp6bxkG43QrrQEb_xEdsKBtKrgduPZojyvLDBxkgsa") repeat; */
 }
 
 .card-header{
-  background-color: #f7f7f7;
+  background-color: #e8e8e8;
+}
+
+.card-header:hover{
+  background-color: rgb(150, 179, 252);
+  border: 1px rgb(150, 179, 252) solid;
+  border-radius: 20%;
 }
 
 .zooming {
   position: relative;  
   overflow: hidden;
+}
+.zooming:hover{
+  border: solid 1px grey;
+  border-radius: 10%;
 }
 
 .zooming img {
