--- a/src/index.css
+++ b/src/index.css
@@ -3,22 +3,24 @@ body {
   padding: 0;
   font-family: sans-serif;
   font-style: italic;
-  /* background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRRKniOCjnp6bxkG43QrrQEb_xEdsKBtKrgduPZojyvLDBxkgsa") repeat; */
+  background: url("http://www.qygjxz.com/data/out/259/4460983-yellow-background.jpg");
 }
+
 
 .card-header{
   background-color: #e8e8e8;
 }
 
 .card-header:hover{
-  background-color: rgb(150, 179, 252);
-  border: 1px rgb(150, 179, 252) solid;
+  background-color: #fffdcb;
+  border: 1px rgb(249, 255, 220) solid;
   border-radius: 20%;
 }
 
 .zooming {
   position: relative;  
   overflow: hidden;
+  margin-top: 30px;
 }
 .zooming:hover{
   border: solid 1px grey;
